feat: Update to Java 21 and Spring Boot 3.3.5